force-app/main/default/objects/Case_Type_Milestone__c/Case_Type_Milestone__c.object-meta.xml
<CustomObject>
    <label>Case Type Milestone</label>
    <nameField>
        <displayFormat>CTM-{00000000}</displayFormat>
        <label>CTM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Type Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>