force-app/main/default/objects/Case_Type_Milestone__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>Case Type Milestones</relationshipLabel>
    <relationshipName>Case_Type_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>