force-app/main/default/objects/Case_Type_Milestone__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Type Milestones</relationshipLabel>
    <relationshipName>Case_Type_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>