force-app/main/default/objects/Case_Type_Milestone__c/fields/Case_Milestone_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Milestone_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Case Milestone Id</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>