force-app/main/default/objects/Case_Type_Milestone__c/fields/CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CompletionDate</label>
    <type>DateTime</type>
</CustomField>