force-app/main/default/objects/Case_Type_Milestone__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>StartDate</label>
    <type>DateTime</type>
</CustomField>